--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"date-fns": "^4.1.0"
 	}
 }
