--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"date-fns": "^4.1.0"
+		"date-fns": "^4.1.0",
+		"slugify": "^1.6.6",
+		"tailwindcss": "^3.4.17"
 	}
 }
